Finished the first iteration. 🙌

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reach/dialog": "^0.13.0",
     "axios": "^0.21.1",
     "next": "10.0.7",
     "react": "17.0.1",
